--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,12 +5,14 @@ header {
   .header__links {
     position: absolute;
     left: 50%;
-    transform: translate(-50%, 0);
+    //transform: translate(-50%, 0);
+    width: 156px;
+    margin-left: -78px;
     @include for-tablet-landscape-up {
-      margin-left: -30px;
+      margin-left: -108px;
     }
     @include for-desktop-up {
-      margin-left: 0;
+      margin-left: -78px;
     }
 
     ul {
@@ -41,6 +43,7 @@ header {
 
           &:hover {
             background-color: #4b4c4c;
+            animation: highlight 5s ease-in-out .5s infinite;
 
             &:before {
               color: #cbcdd2;
