--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,9 @@
 @import "reset";
 @import "fonts-icon";
 @import "fonts";
+@import "animation";
+@import "animation-for-page";
+
 /***************************/
 /*   adaptive properties   */
 /***************************/
@@ -88,7 +91,6 @@ body {
   min-width: 320px;
   max-width: 1400px;
   margin: 0 auto;
-  padding: 0 20px;
 }
 
 @import "_header";
