--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -441,6 +441,7 @@ header {
 header .header__links {
   position: absolute;
   left: 50%;
+  z-index: 100;
   width: 156px;
   margin-left: -78px;
 }
