--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,6 +5,7 @@ header {
   .header__links {
     position: absolute;
     left: 50%;
+    z-index: 100;
     //transform: translate(-50%, 0);
     width: 156px;
     margin-left: -78px;
